API spec changes